<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>RegionRange2dSettingEditWidget</class>
 <widget class="QWidget" name="RegionRange2dSettingEditWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>262</width>
    <height>126</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout" columnstretch="0,1">
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item row="0" column="0">
    <widget class="QLabel" name="iMinLabel">
     <property name="text">
      <string>I Min:</string>
     </property>
    </widget>
   </item>
   <item row="0" column="1">
    <widget class="SliderWithValue" name="iMinSlider">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="tickPosition">
      <enum>QSlider::TicksBelow</enum>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="iMaxLabel">
     <property name="text">
      <string>I Max:</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="SliderWithValue" name="iMaxSlider">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="tickPosition">
      <enum>QSlider::TicksBelow</enum>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="jMinLabel">
     <property name="text">
      <string>J Min:</string>
     </property>
    </widget>
   </item>
   <item row="2" column="1">
    <widget class="SliderWithValue" name="jMinSlider">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="tickPosition">
      <enum>QSlider::TicksBelow</enum>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="QLabel" name="jMaxLabel">
     <property name="text">
      <string>J Max:</string>
     </property>
    </widget>
   </item>
   <item row="3" column="1">
    <widget class="SliderWithValue" name="jMaxSlider">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="tickPosition">
      <enum>QSlider::TicksBelow</enum>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>SliderWithValue</class>
   <extends>QSlider</extends>
   <header>guibase/widget/sliderwithvalue.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
